now has two handlers instead of two lambdas

--- a/serverless.yml
+++ b/serverless.yml
@@ -6,16 +6,13 @@ provider:
   region: eu-west-2
 
 functions:
-  tasks-get:
-    handler: tasks-get.handler
+  tasks:
+    handler: tasks.handler
     events:
       - http:
           path: tasks
           method: get
           cors: true
-  tasks-post:
-    handler: tasks-post.handler
-    events:
       - http:
           path: tasks
           method: post
