--- a/serverless.yml
+++ b/serverless.yml
@@ -4,6 +4,11 @@ provider:
   name: aws
   runtime: nodejs8.10
   region: eu-west-2
+  environment:
+    # RDS_HOST: ${opts:RDS_HOST}
+    # RDS_USER: ${opts:RDS_USER}
+    # RDS_PASSWORD: ${opts:RDS_PASSWORD}
+    # RDS_DATABASE: ${opts:RDS_DATABASE}
 
 # setup from https://github.com/dougmoscrop/serverless-http/blob/a3c32092e572416bf8a9f059a4cb8004a3299ebf/docs/EXAMPLES.md
 
